--- a/react-app/package.json
+++ b/react-app/package.json
@@ -6,7 +6,11 @@
     "antd": "^3.13.2",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
-    "react-scripts": "2.1.4"
+    "react-redux": "^6.0.0",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.1.4",
+    "redux": "^4.0.1",
+    "redux-actions": "^2.6.4"
   },
   "scripts": {
     "start": "node dev-server.js",
